--- a/folksongs/templates/base.html
+++ b/folksongs/templates/base.html
@@ -1,50 +1,50 @@
   <!doctype html>
-  <html lang="en">
-  <head>
+    <html lang="en">
+    <head>
       <!-- Required meta tags -->
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
 
       <!-- Bootstrap CSS -->
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
       <link rel="stylesheet" type="text/css" href="/static/style.css">  
 
       <title>The Greig-Duncan Folk Song Collection </title>
       <link rel="aberdeen icon" href="/static/images/aberdeen.png">
 
-  </head>
-  <body>
+    </head>
+    <body>
 
       <!--Header-->
       <header class="jumbotron header1">
-          <img src="/static/images/aberdeen-logo.png" style="float: left; width: 20%;"> 
-          <h1 style="padding-right: 175px;">The Greig-Duncan Folk Song Collection</h1>
-          <p style="padding-right: 175px;"> University of Aberdeen </p> 
-      </header>
-      <!--Navigation panel-->
-      <nav class="navbar sticky-top navbar-expand-lg nav" style="background: navy; color: white;">
-        <div class="container-fluid" style="color: white;">
-          <a class="navbar-brand" href="{% url 'home' %}" style="color: white;">The Greig-Duncan Folk Song Collection</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+        <img src="/static/images/aberdeen-logo.png" style="float: left; width: 20%;"> 
+       <h1 style="padding-right: 175px;">The Greig-Duncan Folk Song Collection</h1>
+       <p style="padding-right: 175px;"> University of Aberdeen </p> 
+     </header>
+     <!--Navigation panel-->
+     <nav class="navbar sticky-top navbar-expand-lg nav" style="background: navy; color: white;">
+      <div class="container-fluid" style="color: white;">
+        <a class="navbar-brand" href="{% url 'home' %}" style="color: white;">The Greig-Duncan Folk Song Collection</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0 linksList">
-              <li class="nav-item">
-                <a class="nav-link linkElement" href="#" style="color: white;"> Collections </a>
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0 linksList">
+            <li class="nav-item">
+              <a class="nav-link linkElement" href="#" style="color: white;"> Collections </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="" style="color: white;"> Songs </a>
+              <a class="nav-link" href="" style="color: white;"> Songs </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="" style="color: white;"> Admin </a>
+              <a class="nav-link" href="" style="color: white;"> Admin </a>
             </li>
-        </ul>
-        <form class="d-flex" method=POST action="{% url 'search' %}">
+          </ul>
+          <form class="d-flex" method=POST action="{% url 'search' %}">
             {% csrf_token %}
-          <input class="form-control me-2" type="search" placeholder="Search Songs" aria-label="Search" name="searched">
-          <button class="btn" type="submit" style="background: gold;">Search</button>
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <input class="form-control me-2" type="search" placeholder="Search Songs" aria-label="Search" name="searched">
+            <button class="btn" type="submit" style="background: gold;">Search</button>
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               {% if user.is_authenticated %}
               <li class="nav-item">
                 <a class="nav-link" href="#">Profile</a>
@@ -60,28 +60,33 @@
                 <a href="{% url 'song_add' %}" class="btn btn-secondary" style="color: white;">Add...</a>
               </li>
               {% endif %}
-        </ul>
-    </form>
-  </div>
-  </div>
-  </nav>
+            </ul>
+          </form>
+        </div>
+      </div>
+    </nav>
 
-  <br>
+    <br>
 
-  {% block content %}
-  {% endblock %}
+    {% block content %}
+    {% endblock %}
 
-  <!--Footer-->
+    <!--Footer-->
     <!--<footer>
       <div class="jumbotron fixed-bottom footer">
         <p>Team Alpha</p>
       </div>
     </footer>-->
 
- <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <!-- Optional JavaScript; choose one of the two! -->
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!--
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+    -->
   </body>
   </html>
