--- a/folksongs/templates/home.html
+++ b/folksongs/templates/home.html
@@ -6,104 +6,51 @@
 <!--Introduction section-->
 <body style="background: rgb(255,255,240, 0.6);">
 
+  <div class="container">
+    <div class="card">
+      <div class="card-header">
+        <h3> The Greig-Duncan Folk Song Collection </h3>
+      </div>
+      <div class="card-body">
+        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+          cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+          cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+          cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+        proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+      </div>
+    </div>
+  </div>
+
+</br></br> 
+
+
 <div class="container">
-<div class="card">
-  <div class="card-header">
-    <h3> The Greig-Duncan Folk Song Collection </h3>
-  </div>
-  <div class="card-body">
-    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-    proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
-  </div>
-</div>
-</div>
-
-</br></br> 
-
-
-<div class="container" style="background: white; border-radius: 5px; padding: 30px;">
-
-{% for song in songs %}
-<div class="card-deck" >
-  <div class="card" style="border: solid 1px gold;">
-    <img class="card-img-top" src="static/images/music-test.png" alt="Card image cap" >
-    <div class="card-body">
-      <h5 class="card-title">{{song.songName}}</h5>
-      <div class="card-body"><b>Authors:</b> <br> {{song.songAuthor}} </div>
-      <a href="{% url 'song' id=song.id %}" class="btn btn-secondary btn-home">View</a>
+  {% for song in songs %}
+  <div class="card"  style="width: 18rem;" >
+      <img class="card-img-top" src="static/images/music-test.png" alt="Card image cap" >
+      <div class="card-body">
+        <h5 class="card-title"><b>{{song.songName}}</b></h5>
+        <div class="card-body"><b>Authors:</b> <br> {{song.songAuthor}} </div>
+        <a href="{% url 'song' id=song.id %}" class="btn btn-secondary btn-home">View</a>
+      </div>
     </div>
-
   </br></br> 
-
-  </div>
-  <div class="card" style="border: solid 1px gold;">
-    <img class="card-img-top" src="static/images/music-test.png" alt="Card image cap">
-    <div class="card-body">
-      <h5 class="card-title">{{song.songName}}</h5>
-      <div class="card-body"><b>Authors:</b> <br> {{song.songAuthor}} </div>
-      <a href="{% url 'song' id=song.id %}" class="btn btn-secondary btn-home">View</a>
-    </div>
-  </div>
-  <div class="card" style="border: solid 1px gold;">
-    <img class="card-img-top" src="static/images/music-test.png" alt="Card image cap">
-    <div class="card-body">
-      <h5 class="card-title">{{song.songName}}</h5>
-      <div class="card-body"><b>Authors:</b> <br> {{song.songAuthor}} </div>
-      <a href="{% url 'song' id=song.id %}" class="btn btn-secondary btn-home">View</a>
-    </div>
-  </div>
-</div>
-
-</br></br> 
   {% endfor %}
 </div>
-
-</br></br> 
-
 </body>
-
-
-
-<div class="container">
-	<!-- <div class="col"><h1 class="text-center">Welcome!</h1></div> -->
-
-
-
-
-
-
-
-
-<!--
-	<div class="grid-container">
-		{% for song in songs %}
-
-		<div class="card card-home">
-			<div class="card-header"><b>ID: {{song.songID}}</b> <br> <b>Titles:</b> <br>{{song.songName}}</div>
-			<div class="card-body"><b>Authors:</b> <br> {{song.songAuthor}} </div>
-			<a href="{% url 'song' id=song.id %}" class="btn btn-secondary btn-home">View</a>
-			<div class="card-footer">{{song.created_date}}</div>
-			<img class="card-img-bottom" src="{% static 'songs/1516/12.png' %}" alt="hmm" style="width:100%">
-		</div>
-		{% endfor %}
-	</div>
-</div>-->
 {% endblock %}
