--- a/folksongs/templates/song.html
+++ b/folksongs/templates/song.html
@@ -8,77 +8,77 @@
 
 <!-- Code adapted from the following https://getbootstrap.com/docs/4.0/components/card/#sizing -->
 <body style="background: rgb(255,255,240, 0.6);">
-<div class="container" style="background: white;">
+  <div class="container" style="background: white;">
 
-  <div class="card-header" id="bTest" style="border: solid 1px gold;">
-    <div class="card">
-      <div class="card-header">
-       <b><h1>Song ID - {{song.songID}} </h1></b>
-     </div>
-     <div class="card-body">
-      <h5 class="card-title">Information about this song </h5>
-      <p class="card-text">  
-        <b>Titles: </b> {{song.songName}} <br>
-        <b>Authors: </b> {{song.songAuthor}}
-
-      </p>
-    </div>
-  </div>
-  <br/>
-  <div class="row">
-    <div class="col-sm-6">
+    <div class="card-header" id="bTest" style="border: solid 1px gold;">
       <div class="card">
-        <div class="card-body">
-          <h5 class="card-title"> <b>Music Notation notes</b></h5>
-          <p class="card-text">Below you will find music notation on - Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-          proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <div class="card-header">
+         <b><h1>Song ID - {{song.songID}} </h1></b>
+       </div>
+       <div class="card-body">
+        <h5 class="card-title">Information about this song </h5>
+        <p class="card-text">  
+          <b>Titles: </b> {{song.songName}} <br>
+          <b>Authors: </b> {{song.songAuthor}}
+
+        </p>
+      </div>
+    </div>
+    <br/>
+    <div class="row">
+      <div class="col-sm-6">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title"> <b>Music Notation notes</b></h5>
+            <p class="card-text">Below you will find music notation on - Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+              quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+              consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+              cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-6">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title"><b>Song details and further links</b></h5>
+            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <p class="card-text">ID: {{song.id}}</p>
+            <p class="card-text">Description: {{song.description}}</p>
+            <p class="card-text">Date: {{song.created_date}}</p>
+          </div>
         </div>
       </div>
     </div>
-    <div class="col-sm-6">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title"><b>Song details and further links</b></h5>
-          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-          <p class="card-text">ID: {{song.id}}</p>
-          <p class="card-text">Description: {{song.description}}</p>
-          <p class="card-text">Date: {{song.created_date}}</p>
+    <br/>
+    <br/>
+
+
+    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      </div>
+        <div class="carousel-inner">
+          {% for i in images%}
+          <div class="carousel-item {% if forloop.counter0 == 0 %} active {% endif %}">
+            <img class="d-block w-100" src="{{i.image.url}}" alt="Second slide">
+          </div>
+          {% endfor %}
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
         </div>
       </div>
     </div>
-  </div>
-  <br/>
-  <br/>
-
-
-  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-      {% for i in images%}
-      <li data-target="#carouselExampleIndicators" data-slide-to="{{ forloop.counter0 }}" class="{% if forloop.counter0 == 0 %} active {% endif %}"></li>
-      {% endfor %}
-    </ol>
-    <div class="carousel-inner">
-      {% for i in images%}
-      <div class="carousel-item {% if forloop.counter0 == 0 %} active {% endif %}">
-        <img class="d-block w-100" src="{{i.image.url}}" alt="Second slide">
-      </div>
-      {% endfor %}
-      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
-  </div>
-</div>
-</body>
-{% endblock %}
+  </body>
+  {% endblock %}
 
 <!-- src="{% static 'songs/3.png' %}" -->
