--- a/static/style.css
+++ b/static/style.css
@@ -92,7 +92,7 @@ color: white;
 
 .grid-container {
   display: grid;
-  grid-template-columns: auto auto auto auto;
+  grid-template-columns:60px 60px 60px 60px;
   grid-gap: 10px;
   background-color: rgb(232, 232, 232);
   border: 1px solid black;
@@ -123,23 +123,4 @@ color: white;
 
 #login-style {
   margin-left: 500px;
-}
-
-
-div.gallery {
-  border: 1px solid #ccc;
-}
-
-div.gallery:hover {
-  border: 1px solid #777;
-}
-
-div.gallery img {
-  width: 100%;
-  height: auto;
-}
-
-div.desc {
-  padding: 15px;
-  text-align: center;
 }
