--- a/folksongs/templates/base.html
+++ b/folksongs/templates/base.html
@@ -44,7 +44,18 @@
           <form class="d-flex" method=POST action="{% url 'search' %}">
             {% csrf_token %}
             <input class="form-control me-2" type="search" placeholder="Search Songs" aria-label="Search" name="name">
-            <input class="form-control me-2" type="search" placeholder="Search Volumes" aria-label="Search" name="volume">
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                filters
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <br>
+                <input class="form-control me-2" type="search" placeholder="Search Volumes" aria-label="Search" name="volume">
+                <br>
+                <input class="form-control me-2" type="search" placeholder="Search Author" aria-label="Search" name="author">
+                <br>
+              </ul>
+            </li>
             <button class="btn" type="submit" style="background: gold;">Search</button>
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               {% if user.is_authenticated %}
@@ -89,6 +100,6 @@
     <!--
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    -->
-  </body>
-  </html>
+  -->
+</body>
+</html>
