--- a/folksongs/templates/search.html
+++ b/folksongs/templates/search.html
@@ -1,15 +1,15 @@
 {% extends 'base.html' %}
 {% block content %}
 <center>
-{% if name|length > 0 and volume|length > 0 %}
-	<h1>The song title: {{ name }} Volume: {{ volume }}</h1>
+{% if name|length > 0 and volume|length > 0 and author|length > 0  %}
+	<h1>The song title: {{ name }} || Author: {{ author }} || Volume: {{ volume }}</h1>
 	<br>
 </center>
 <ol>
 	<div class="list-group">
-		{% for song in songVolume %}
+		{% for song in songFilters %}
 		<li>
-			ID:{{ song.id }} Title: {{ song.songName }} Volume: {{ song.songVolume }} Link: 
+			ID:{{ song.id }} Title: {{ song.songName }} Author: {{ song.songAuthor }} Volume: {{ song.songVolume }} Link: 
 			<a href="{% url 'song' song.id %}"> Song's page </a>
 			{% endfor %}
 		</li>
@@ -22,7 +22,7 @@
 </center>
 <ol>
 	<div class="list-group">
-		{% for song in songVolume %}
+		{% for song in songFilters %}
 		<li>
 			ID: {{ song.id }} Volume: {{ song.songVolume }} Title: {{ song.songName }} Link: 
 			<a href="{% url 'song' song.id %}"> Song's page </a>
@@ -37,9 +37,25 @@
 </center>
 <ol>
 	<div class="list-group">
-		{% for song in songVolume %}
+		{% for song in songFilters %}
 		<li>
 			ID: {{ song.id }} Title: {{ song.songName }} Volume: {{ song.songVolume }} Link: 
+			<a href="{% url 'song' song.id %}"> Song's page </a>
+			{% endfor %}
+		</li>
+	</div>
+</ol>
+
+
+{% elif author|length > 0 and volume|length == 0 %}
+	<h1> Author: {{ author }} </h1>
+	<br>
+</center>
+<ol>
+	<div class="list-group">
+		{% for song in songFilters %}
+		<li>
+			ID: {{ song.id }} Title: {{ song.songName }} Author: {{ song.songAuthor }} Link: 
 			<a href="{% url 'song' song.id %}"> Song's page </a>
 			{% endfor %}
 		</li>
