--- a/static/style.css
+++ b/static/style.css
@@ -7,7 +7,8 @@
 /* navigation bar */
 .nav {
   height: 70px;
-  overflow: hidden;
+/*  overflow: hidden;*/
+  overflow-y: visible !important;
   background-color: rgb(232, 232, 232);
   font-size: 20px;
   padding: 0;
